<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuitem_nav_frontpagestories"
            android:icon="@drawable/ic_whatshot"
            android:title="@string/nav_topstories" />

        <item
            android:id="@+id/menuitem_nav_newstories"
            android:icon="@drawable/ic_flash_on"
            android:title="@string/nav_newstories" />

        <item
            android:id="@+id/menuitem_nav_askstories"
            android:icon="@drawable/ic_forum"
            android:title="@string/nav_askstories" />

        <item
            android:id="@+id/menuitem_nav_showstories"
            android:icon="@drawable/ic_people"
            android:title="@string/nav_showstories" />

        <item
            android:id="@+id/menuitem_nav_jobstories"
            android:icon="@drawable/ic_work"
            android:title="@string/nav_jobstories" />

        <item
            android:id="@+id/menuitem_nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />

    </group>

</menu>
